# shopping-agent

./: pyproject.toml
src/: functions.py  llms.py  maincode.py  states.py
