[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langgraph>=0.2.74",
    "tavily-python>=0.5.1",
]
